syntax = "proto3";

package models;

message Campaign { string id = 1; }

message CampaignList { repeated Campaign items = 1; }